--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
+    <link rel="icon" href="images/favicon.png" type="image/png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
   </head>
@@ -57,7 +58,7 @@
         </nav>
       </div>
       <div class="header-info">
-        <div class="header-text">
+        <div class="header-text animate">
           <h1>Spoon <span>JOY</span></h1>
           <p class="subtitle">Мед завжди з тобою</p>
 
@@ -76,7 +77,7 @@
           src="images/about.png"
           alt="ТОВ «Лінія Меду» — виробник фасованого меду у зручний формат ложечок."
         />
-        <div class="text">
+        <div class="text animate">
           <p class="subtitle">
             <img src="images/SpoonJoy.png" alt="Spoon JOY" />
             ТОВ «Лінія Меду» — виробник фасованого меду у зручний формат
@@ -91,7 +92,7 @@
               <img src="images/about1.jpg" alt="Spoon Joy" />
             </div>
           </div>
-          <p class="about-text">
+          <p class="about-text animate">
             Ми займаємося фасуванням натурального меду в одноразові ложки —
             зручно, акуратно та завжди під рукою.
           </p>
@@ -104,7 +105,7 @@
             </div>
           </div>
 
-          <p class="about-text">
+          <p class="about-text animate">
             Spoon Joy створений для поїздок, подорожей, тренувань, роботи,
             навчання та прогулянок — коли потрібна енергія та користь.
           </p>
@@ -116,7 +117,7 @@
               <img src="images/about3.jpg" alt="Honey on the go" />
             </div>
           </div>
-          <p class="about-text">
+          <p class="about-text animate">
             Ми звикли, що мед живе вдома у банці. Але з Spoon Joy — мед завжди з
             вами! В кишені, у рюкзаку чи сумці.
           </p>
@@ -126,14 +127,14 @@
 
     <section id="advantages" class="advantages">
       <div class="container">
-        <h2 class="title">Переваги</h2>
-        <p class="subtitle">
+        <h2 class="title animate">Переваги</h2>
+        <p class="subtitle animate">
           Spoon Joy — це не просто мед. <br />
           Це продуманий формат турботи про себе.
         </p>
 
         <div class="advantages-grid">
-          <div class="advantage-item">
+          <div class="advantage-item animate">
             <div class="adv-hex">
               <i class="fa-solid fa-leaf"></i>
             </div>
@@ -144,7 +145,7 @@
             </p>
           </div>
 
-          <div class="advantage-item">
+          <div class="advantage-item animate">
             <div class="adv-hex">
               <i class="fa-solid fa-hand-holding-heart"></i>
             </div>
@@ -155,7 +156,7 @@
             </p>
           </div>
 
-          <div class="advantage-item">
+          <div class="advantage-item animate">
             <div class="adv-hex">
               <i class="fa-solid fa-bag-shopping"></i>
             </div>
@@ -166,7 +167,7 @@
             </p>
           </div>
 
-          <div class="advantage-item">
+          <div class="advantage-item animate">
             <div class="adv-hex">
               <i class="fa-solid fa-shield-heart"></i>
             </div>
@@ -177,7 +178,7 @@
             </p>
           </div>
 
-          <div class="advantage-item">
+          <div class="advantage-item animate">
             <div class="adv-hex">
               <i class="fa-solid fa-gift"></i>
             </div>
@@ -188,7 +189,7 @@
             </p>
           </div>
 
-          <div class="advantage-item">
+          <div class="advantage-item animate">
             <div class="adv-hex">
               <i class="fa-solid fa-sun"></i>
             </div>
@@ -204,7 +205,7 @@
 
     <section id="certificates" class="certificates">
       <div class="container certificates-inner">
-        <div class="certificate-content">
+        <div class="certificate-content animate">
           <span class="certificate-label">Сертифікація</span>
           <h2 class="certificate-title">HACCP</h2>
 
@@ -235,7 +236,7 @@
     <section id="contacts" class="contacts">
       <img src="images/flowers.png" alt="flowers" class="flowers" />
       <div class="container contacts-inner">
-        <div class="contacts-content">
+        <div class="contacts-content animate">
           <span class="certificate-label">Звʼязок з нами</span>
           <h2 class="title">Ми завжди на звʼязку</h2>
 
