--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Spoon Joy</title>
+    <title>Spoon Joy – натуральний мед у зручних ложках</title>
     <meta
       name="description"
-      content="Одноразові ложки з натуральним медом — зручно в дорозі, на роботі, у школі та відпочинку."
+      content="Spoon Joy – одноразові ложки з натуральним медом, зручно в дорозі, на роботі та в школі. Купити мед онлайн."
     />
+    <meta
+      name="keywords"
+      content="Spoon Joy, мед, натуральний мед, мед у ложках, купити мед онлайн, мед в дорозі, мед для дітей"
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://spoonjoy.com.ua" />
 
     <meta property="og:title" content="Spoon Joy" />
     <meta
