--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
             Одноразові ложки з натуральним медом. <br />
             Зручно в дорозі, на роботі, у школі та відпочинку.
           </p>
+          <a href="https://t.me/+380973037700" class="main-button">
+            <i class="fab fa-telegram"></i>Замовити</a
+          >
         </div>
         <img src="images/header.png" alt="Spoon Joy" />
       </div>
@@ -207,6 +210,9 @@
             </p>
           </div>
         </div>
+        <a href="https://t.me/+380973037700" class="main-button">
+          <i class="fab fa-telegram"></i>Замовити</a
+        >
       </div>
     </section>
 
