--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="keywords"
-      content="Spoon Joy, мед, натуральний мед, мед у ложках, купити мед онлайн, мед в дорозі, мед для дітей"
+      content="Spoon Joy, мед, натуральний мед, мед у ложках, купити мед онлайн, мед в дорозі, мед для дітей, Ложка меду, Мед по 7 грам, Ложка радості, Мед України, Крем мед, Мед з фруктами, Мед з бадами, Корисний мед"
     />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://spoonjoy.com.ua" />
@@ -150,8 +150,8 @@
             </div>
             <h3>100% натуральний</h3>
             <p>
-              Тільки справжній мед без домішок, ароматизаторів та компромісів.
-              Ми зберігаємо його природний смак, користь і енергію.
+              Тільки справжній мед без домішок, ароматизаторів. Ми зберігаємо
+              його природний смак, користь і енергію.
             </p>
           </div>
 
