--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             Одноразові ложки з натуральним медом. <br />
             Зручно в дорозі, на роботі, у школі та відпочинку.
           </p>
-          <a href="https://t.me/+380973037700" class="main-button">
+          <a href="https://t.me/Spoon_joy" class="main-button">
             <i class="fab fa-telegram"></i>Замовити</a
           >
         </div>
@@ -210,7 +210,7 @@
             </p>
           </div>
         </div>
-        <a href="https://t.me/+380973037700" class="main-button">
+        <a href="https://t.me/Spoon_joy" class="main-button">
           <i class="fab fa-telegram"></i>Замовити</a
         >
       </div>
@@ -265,11 +265,11 @@
 
           <div class="contacts-list">
             <a href="mailto:Liniyamedu@gmail.com">
-              <strong>Email:</strong> Liniyamedu@gmail.com
+              <strong>Email:</strong> liniyamedu@gmail.com
             </a>
 
-            <a href="tel:+38097303770">
-              <strong>Директор:</strong> 097 303 77 70
+            <a href="tel:+380973037700">
+              <strong>Директор:</strong> 097 303 77 00
             </a>
 
             <a href="tel:+380985050102">
