Update Instagram link to the correct URL

--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
               <strong>Менеджер:</strong> 098 505 01 02
             </a>
 
-            <a href="#" class="instagram">
-              <strong>Instagram:</strong> @spoonjoy
+            <a href="https://www.instagram.com/spoon.joy.ua" class="instagram">
+              <strong>Instagram:</strong> @spoon.joy.ua
             </a>
           </div>
         </div>
