--- a/index.html
+++ b/index.html
@@ -244,6 +244,38 @@
           <img src="images/HACCP.png" alt="Сертифікат HACCP Spoon Joy" />
         </div>
       </div>
+      <div class="container certificates-inner reverse">
+        <div class="certificate-content animate">
+          <span class="certificate-label">Міжнародний стандарт</span>
+          <h2 class="certificate-title">ISO 22000:2018</h2>
+
+          <p class="certificate-text">
+            Виробництво меду Spoon Joy відповідає вимогам
+            <strong>ISO 22000:2018</strong> — міжнародного стандарту системи
+            управління безпечністю харчових продуктів.
+          </p>
+
+          <p class="certificate-text">
+            Сертифікація підтверджує відповідальність бренду за якість
+            продукції, прозорість процесів та дотримання світових норм харчової
+            безпеки.
+          </p>
+
+          <ul class="certificate-list">
+            <li>Міжнародне визнання якості</li>
+            <li>Системний контроль безпеки продукту</li>
+            <li>Відповідність стандартам ЄС</li>
+            <li>Офіційна сертифікація виробництва</li>
+          </ul>
+        </div>
+
+        <div class="certificate-image">
+          <img
+            src="images/ISO-22000.png"
+            alt="Сертифікат ISO 22000 Spoon Joy"
+          />
+        </div>
+      </div>
     </section>
 
     <section id="contacts" class="contacts">
